[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/grass-tileset.png" type="Texture" id=2]
[ext_resource path="res://resources/WallsTileset.tres" type="TileSet" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Main.gd" type="Script" id=6]
[ext_resource path="res://assets/sounds/shoot.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/enemy-hit.wav" type="AudioStream" id=9]
[ext_resource path="res://scenes/MainMenu.tscn" type="PackedScene" id=10]

[sub_resource type="TileSet" id=1]
0/name = "grass-tileset.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 511, Vector2( 0, 1 ), 511, Vector2( 0, 2 ), 511, Vector2( 0, 3 ), 511, Vector2( 1, 0 ), 511, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 511, Vector2( 1, 3 ), 511, Vector2( 2, 0 ), 511, Vector2( 2, 1 ), 511, Vector2( 2, 2 ), 511, Vector2( 2, 3 ), 511, Vector2( 3, 0 ), 511, Vector2( 3, 1 ), 511, Vector2( 3, 2 ), 511, Vector2( 3, 3 ), 511 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="Animation" id=2]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("OverlayLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("OverlayLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Main" type="Node"]
script = ExtResource( 6 )

[node name="YSort" type="YSort" parent="."]

[node name="Ground" type="TileMap" parent="YSort"]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
collision_mask = 14
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, 65535, 0, 0, 0, 0, 131075, 1, 0, 131073, 2, 0, 196609, 3, 0, 65538, 4, 0, 131073, 5, 0, 65539, 6, 0, 131073, 7, 0, 65536, 8, 0, 1, 9, 0, 3, 10, 0, 0, 131071, 0, 0, 65536, 0, 131073, 65537, 0, 3, 65538, 0, 131072, 65539, 0, 131072, 65540, 0, 131072, 65541, 0, 65537, 65542, 0, 131075, 65543, 0, 0, 65544, 0, 65539, 65545, 0, 0, 65546, 0, 0, 196607, 0, 0, 131072, 0, 65536, 131073, 0, 0, 131074, 0, 65538, 131075, 0, 65538, 131076, 0, 1, 131077, 0, 3, 131078, 0, 131073, 131079, 0, 3, 131080, 0, 196608, 131081, 0, 196611, 131082, 0, 0, 262143, 0, 0, 196608, 0, 131072, 196609, 0, 131073, 196610, 0, 196610, 196611, 0, 0, 196612, 0, 65537, 196613, 0, 131072, 196614, 0, 196611, 196615, 0, 131074, 196616, 0, 65537, 196617, 0, 65537, 196618, 0, 0, 327679, 0, 0, 262144, 0, 65537, 262145, 0, 0, 262146, 0, 196610, 262147, 0, 196611, 262148, 0, 1, 262149, 0, 65537, 262150, 0, 131075, 262151, 0, 196611, 262152, 0, 131075, 262153, 0, 196610, 262154, 0, 0, 393215, 0, 0, 327680, 0, 2, 327681, 0, 196611, 327682, 0, 196608, 327683, 0, 196608, 327684, 0, 196611, 327685, 0, 196609, 327686, 0, 0, 327687, 0, 65539, 327688, 0, 2, 327689, 0, 65537, 327690, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0 )

[node name="Player" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 157, 97 )

[node name="UpperWalls" type="TileMap" parent="YSort"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
collision_mask = 14
format = 1
tile_data = PoolIntArray( 0, 9, 0, 1, 23, 0, 2, 23, 0, 3, 21, 0, 4, 2, 0, 6, 22, 0, 7, 24, 0, 8, 24, 0, 9, 6, 0, 65536, 18, 0, 65545, 17, 0, 131072, 1, 0, 131081, 0, 0, 262144, 20, 0, 262153, 19, 0 )

[node name="LowerWalls" type="TileMap" parent="YSort"]
position = Vector2( 0, 192 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
collision_mask = 14
format = 1
tile_data = PoolIntArray( -393213, 11, 0, -393210, 12, 0, -393209, 16, 0, -393208, 16, 0, -65536, 7, 0, -65535, 28, 0, -65534, 28, 0, -65533, 27, 0, -65532, 10, 0, -65530, 25, 0, -65529, 26, 0, -65528, 26, 0, -65527, 8, 0 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="PlayerSpawn" type="Node2D" parent="."]
position = Vector2( 42, 48 )

[node name="ShootAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0

[node name="HitAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="LoseAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0
pitch_scale = 0.5

[node name="MusicAudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="EnemySpawns" type="Node" parent="."]

[node name="Spawn1" type="Position2D" parent="EnemySpawns" groups=["EnemySpawns"]]
position = Vector2( 54, 55 )

[node name="Spawn2" type="Position2D" parent="EnemySpawns" groups=["EnemySpawns"]]
position = Vector2( 112, 138 )

[node name="Spawn3" type="Position2D" parent="EnemySpawns" groups=["EnemySpawns"]]
position = Vector2( 204, 138 )

[node name="Spawn4" type="Position2D" parent="EnemySpawns" groups=["EnemySpawns"]]
position = Vector2( 261, 138 )

[node name="Spawn5" type="Position2D" parent="EnemySpawns" groups=["EnemySpawns"]]
position = Vector2( 261, 55 )

[node name="Spawn6" type="Position2D" parent="EnemySpawns" groups=["EnemySpawns"]]
position = Vector2( 204, 55 )

[node name="Spawn7" type="Position2D" parent="EnemySpawns" groups=["EnemySpawns"]]
position = Vector2( 54, 138 )

[node name="Spawn8" type="Position2D" parent="EnemySpawns" groups=["EnemySpawns"]]
position = Vector2( 112, 55 )

[node name="Spawn9" type="Position2D" parent="EnemySpawns" groups=["EnemySpawns"]]
position = Vector2( 83, 89 )

[node name="Spawn10" type="Position2D" parent="EnemySpawns" groups=["EnemySpawns"]]
position = Vector2( 235, 97 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
playback_process_mode = 0
anims/FadeIn = SubResource( 2 )
anims/FadeOut = SubResource( 3 )

[node name="ExitArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="EastGateArea" type="CollisionPolygon2D" parent="ExitArea"]
build_mode = 1
polygon = PoolVector2Array( 312, 64, 328, 64, 328, 128, 312, 128 )

[node name="WestGateArea" type="CollisionPolygon2D" parent="ExitArea"]
position = Vector2( -320, 0 )
build_mode = 1
polygon = PoolVector2Array( 312, 64, 328, 64, 328, 128, 312, 128 )

[node name="NorthGateArea" type="CollisionPolygon2D" parent="ExitArea"]
position = Vector2( -328, 0 )
build_mode = 1
polygon = PoolVector2Array( 456, 8, 520, 8, 520, -8, 456, -8 )

[node name="SouthGateArea" type="CollisionPolygon2D" parent="ExitArea"]
position = Vector2( -328, 192 )
build_mode = 1
polygon = PoolVector2Array( 456, 8, 520, 8, 520, -8, 456, -8 )

[node name="MainMenu" parent="." instance=ExtResource( 10 )]

[node name="OverlayLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="OverlayLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.9 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="ExitArea" to="." method="_on_ExitArea_body_entered"]
